# LabM

./: CMakeLists.txt
LabM1/: CMakeLists.txt  main.cpp
LabM2/: CMakeLists.txt  extendedslice.h  lab2types.h  main.cpp  slice.h
LabM2/FieldViewer/: CMakeLists.txt  mainwindow.cpp  mainwindow.h  mainwindow.ui
LabM3/: CMakeLists.txt  main.cpp
LabM4/: CMakeLists.txt  lab4types.h  main.cpp
Reports/: lab1.doc  lab2.docx  lab3.docx  lab4.docx  res_L1.xlsx  res_L2.xlsx  res_L3.xlsx  res_L4.xlsx
Utils/: extendedslice.h  slice.h  utils.h
